# Research-Paper-QA-Assistant

./: .gitignore  app.py  main.py  pyproject.toml
src/: citations.py  embeddings.py  guardrails.py  ingest.py  memory.py  qa_chain.py  retriever.py  summarizer.py  utils.py
